--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,27 +1,33 @@
+@import "https://fonts.googleapis.com/css2?family=Inter&display=swap";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
+    --tw-gradient-stops: linear-gradient(180deg, #2D66F8 0%, #2A5EE6 52.08%, #2554CC 100%);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.input-after::after {
+    content: "Forgot password?" !important;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    color: rgb(var(--foreground-rgb));
+    font-style: normal;
+}
+
+* {
+    font-family: 'Inter', sans-serif !important;
+}
+
+.hover-border-none:hover {
+    border: none !important;
+    outline: none !important;
+}
+
+.radius-8+fieldset {
+    border-color: #D8DDE9;
+    border-radius: 8px;
 }
